--- a/package.json
+++ b/package.json
@@ -11,15 +11,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.1.2",
+    "@angular/animations": "^11.1.2",
+    "@angular/cdk": "^11.1.2",
     "@angular/common": "~11.1.2",
     "@angular/compiler": "~11.1.2",
     "@angular/core": "~11.1.2",
     "@angular/forms": "~11.1.2",
+    "@angular/http": "^7.2.16",
+    "@angular/material": "^11.1.2",
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
+    "buffer": "^5.7.1",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "express": "4.17.1",
+    "fs": "^0.0.1-security",
+    "mssql": "^6.3.1",
+    "mysql": "github:mysqljs/mysql",
+    "net": "^1.0.2",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.3",
+    "stream": "^0.0.2",
+    "timers": "^0.1.1",
+    "tls": "^0.0.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -28,7 +43,7 @@
     "@angular/cli": "~11.1.3",
     "@angular/compiler-cli": "~11.1.2",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.19.16",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -41,5 +56,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.2"
+  },
+  "browser": {
+    "crypto": false,
+    "fs": false
   }
 }
