--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
+    "body-parser": "^1.19.0",
     "buffer": "^5.7.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
